--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-        <style></style>
+        <style>
+            .navbar-nav .nav-link:not(:last-child) {
+  margin-right: 10rem;
+}
+        </style>
     </head>
     <body>
         <!-- Spinner Start -->
@@ -42,12 +46,16 @@
         </div>
         <!-- Spinner End -->
         <!-- Navbar bar 1 row style -->
+        <a href="index.html" class="navbar-brand d-flex align-items-center justify-content-center px-4 px-lg-5">
+            <h2 class="m-0 text-primary">
+                <!-- Beyond Space -->
+                <!-- <img src="/Document_files/bs_logo.svg" alt="" srcset=""> -->
+                <svg width="300" height="80">
+                    <image xlink:href="bs_logo.svg"/>
+                </svg>
+            </h2>
+        </a>
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="background-color: #c9bdaf;">
-            <a href="index.html" class="navbar-brand d-flex align-items-center justify-content-center px-4 px-lg-5">
-                <h2 class="m-0 text-primary">
-                    Beyond Space
-                </h2>
-            </a>
             <button
                 type="button"
                 class="navbar-toggler me-4"
@@ -56,25 +64,29 @@
             >
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <a href="contact.html" class="btn btn-primary py-4 px-lg-5 ms-auto d-none d-lg-block me-auto">
+                Contact
+            </a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="courses.html" class="nav-item nav-link">Catalog</a>
-                    <div class="nav-item dropdown">
+                <div class="navbar-nav mx-auto p-4 p-lg-0">
+                    <a href="index.html" class="nav-item nav-link active">Shop</a>
+                    <a href="about.html" class="nav-item nav-link">Collective</a>
+                    <a href="courses.html" class="nav-item nav-link">Designers</a>
+                    <a href="courses.html" class="nav-item nav-link">About Us</a>
+                    <a href="courses.html" class="nav-item nav-link">Contact</a>
+                    <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu fade-down m-0">
                             <a href="team.html" class="dropdown-item">Our Team</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </div> -->
                 </div>
-                <a href="" class="btn btn-primary py-4 px-lg-5 ms-auto d-none d-lg-block">
+                <a href="" class="btn btn-primary py-4 px-lg-5 ms-4 d-none d-lg-block">
                     Join Now
-                    <i class="fa fa-arrow-right ms-3"></i>
                 </a>
+                <!-- <i class="fa fa-arrow-right ms-3"></i> -->
             </div>
         </nav>
         <!-- Navbar 1 End -->
